# SkillChain_AI

./: .env.example  .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  vercel.json
backend/: alembic.ini  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: activity.py  admin.py  assessments.py  assistant.py  auth.py  credentials.py  feedback.py  github.py  health.py  marketplace.py  notifications.py  users.py
backend/app/core/: attestation.py  auth.py  config.py  errors.py  logging.py  middleware.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  auth_challenge.py  feedback.py  (+5 more)
backend/app/integrations/: albedo.py  gemini.py  github.py  stellar.py
backend/app/schemas/: activity.py  assessment.py  assistant.py  auth.py  credential.py  feedback.py  github.py  health.py  marketplace.py  notification.py  user.py
backend/app/services/: __init__.py  activity.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260716_0001_core_identity.py  20260719_0002_job_applications.py  20260720_0003_auth_profiles.py  20260721_0004_application_notifications.py
backend/tests/: test_admin_activity.py  test_albedo_assistant.py  test_auth_security.py  test_database_config.py  test_database_models.py  test_feedback.py  test_gemini_assessment.py  test_github_evidence.py  test_github_integration.py  test_health.py  test_marketplace_applications.py  test_stellar_credentials.py  test_vercel_entrypoint.py
(+68 files in other folders)
